--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -47,6 +47,17 @@ a:active {
 	text-decoration: none;
 }
 
+.footerText 
+{
+	a:link,
+	a:hover,
+	a:visited,
+	a:active {
+		color: $primary-text-color;
+		text-decoration: none;
+	}
+}
+
 // Shadows
 $drop-shadow: 	drop-shadow(0px 5px 10px rgba(#000, 0.1)) 
 				drop-shadow(0px 1px 1px rgba(#000, 0.2)
